IDEADEV-26387